--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,9 @@
   font-size: 4.2em;
 
 }
+.navbar-right form{
+  padding-top: 13px;
+}
 
 .mybox{
   width: 100%;
@@ -56,7 +59,11 @@
     font-size:20px;
   }
 }
-
+.navbar{
+  -webkit-box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.67);
+-moz-box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.67);
+box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.67);
+}
 @media (max-width: 600px) {
   .fullinfo{
     padding-left: 3%;
