--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,9 @@
+body{
+  background-image: linear-gradient(-90deg, #E3DDE3, #E9EBED);
 
+
+
+}
 .navbar-brand{
   font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 100;
@@ -25,6 +30,7 @@
   padding-bottom: 10px;
   text-align: center;
   font-size: 2em;
+  background: none;
 
 
 }
@@ -60,9 +66,10 @@
   }
 }
 .navbar{
-  -webkit-box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.67);
--moz-box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.67);
-box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.67);
+  opacity: 0.96;
+  -webkit-box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.57);
+-moz-box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.57);
+box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.57);
 }
 @media (max-width: 600px) {
   .fullinfo{
@@ -98,3 +105,58 @@ box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.67);
 .artist{
     /*border-bottom: 0.5px solid #3d566e;*/
 }
+
+/*scrolltop*/
+.cd-top {
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  position: fixed;
+  bottom: 20px;
+  right: 10px;
+  border-radius: 3px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+  /* image replacement properties */
+  overflow: hidden;
+  text-indent: 100%;
+  white-space: nowrap;
+  background: rgba(44,62,80, 0.8) url(../img/cd-top-arrow.svg) no-repeat center 50%;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: opacity .3s 0s, visibility 0s .3s;
+  -moz-transition: opacity .3s 0s, visibility 0s .3s;
+  transition: opacity .3s 0s, visibility 0s .3s;
+}
+.cd-top.cd-is-visible, .cd-top.cd-fade-out, .no-touch .cd-top:hover {
+  -webkit-transition: opacity .3s 0s, visibility 0s 0s;
+  -moz-transition: opacity .3s 0s, visibility 0s 0s;
+  transition: opacity .3s 0s, visibility 0s 0s;
+}
+.cd-top.cd-is-visible {
+  /* the button becomes visible */
+  visibility: visible;
+  opacity: 1;
+}
+.cd-top.cd-fade-out {
+  /* if the user keeps scrolling down, the button is out of focus and becomes less visible */
+  opacity: .5;
+}
+.no-touch .cd-top:hover {
+  background-color: #e86256;
+  opacity: 1;
+}
+@media only screen and (min-width: 768px) {
+  .cd-top {
+    right: 20px;
+    bottom: 20px;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .cd-top {
+    height: 60px;
+    width: 60px;
+    right: 30px;
+    bottom: 30px;
+  }
+}
+/*scrolltopend*/
