--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,9 @@ body{
   text-align: center;
   font-size: 2em;
   background: none;
+  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 100;
+  text-transform: uppercase;
 
 
 }
@@ -73,7 +76,7 @@ box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.57);
 }
 @media (max-width: 600px) {
   .fullinfo{
-    padding-left: 3%;
+    padding-left: 6%;
     padding-right: 3%;
 
 
